# memory

./: .gitignore  README.md  docker-compose.pg.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: usage.md
migrations/: 001_initial_schema.sql  002_consolidation.sql
scripts/: benchmark.sh  generate_benchmark_report.py  pgvector_local.sh  quality.sh  run_longmemeval_service.sh
src/openclaw_memory/: __init__.py  answer_contract.py  app.py  batch.py  config.py  conflict_resolver.py  consolidation.py  dedup.py  dependencies.py  embeddings.py  extraction.py  hybrid.py  internal.py  lightmem.py  llm_rerank.py  manager.py  manager_search.py  memory_flush.py  memory_normalize.py  mmr.py  pg_schema.py  pg_search.py  query_expansion.py  schema.py  service.py  session_writer.py  short_term_buffer.py  sync.py  temporal_decay.py  types.py  working_memory.py
src/openclaw_memory/cli/: __init__.py  main.py
src/openclaw_memory/consolidation/: consolidator.py  dedup.py  promotion.py
src/openclaw_memory/core/: embeddings.py  llm_client.py  service.py  types.py
src/openclaw_memory/db/: connection.py  queries.py  schema.py
src/openclaw_memory/index/: _utils.py  manager.py  search.py  session.py  sync.py
src/openclaw_memory/ingest/: buffer.py  conflict.py  consolidation.py  extraction.py  sensory.py
src/openclaw_memory/memory/: episodic.py  semantic.py  working.py
src/openclaw_memory/middleware/: __init__.py  auth.py  rate_limit.py
src/openclaw_memory/models/: memory.py  search.py  session.py
src/openclaw_memory/pg/: schema.py  search.py  working.py
src/openclaw_memory/retrieval/: decay.py  hybrid.py  mmr.py  rerank.py
src/openclaw_memory/routers/: admin.py  health.py  memory.py  search.py  session.py
src/openclaw_memory/utils/: llm.py  (+3 more)
tests/: conftest.py
tests/benchmark/: results_longmemeval_qa.json  run_longmemeval_qa.py  run_real_embedding_benchmark.py
tests/helpers/: embeddings_mock.py  manager_helpers.py
tests/integration/: test_manager_atomic_reindex.py  test_manager_index.py  test_manager_sync.py  test_memory_cli.py  test_schema.py
tests/unit/: test_answer.py  test_auth.py  test_config.py  test_dual_llm.py  test_extraction.py  test_hybrid.py  test_imports.py  test_internal.py  test_llm_client.py  test_mmr.py  test_models.py  test_normalize.py  test_query_expansion.py  test_ranking.py  test_rate_limit.py  test_search.py  test_sensory.py  test_temporal_decay.py  test_token_tracker.py  test_types.py  test_utils.py
(+19 files in other folders)
